--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "url": "https://github.com/SSENSE/eslint-config/issues"
   },
   "homepage": "https://github.com/SSENSE/eslint-config#readme",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "js-yaml": "^3.4.2"
   },
   "peerDependencies": {
+    "babel-eslint": "^7.1.1",
     "eslint": ">= 3",
+    "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-fp": "^2.2.0",
-    "babel-eslint": "^7.1.1"
+    "eslint-plugin-vue": "^1.0.0"
   }
 }
