--- a/source/base.yaml
+++ b/source/base.yaml
@@ -1,31 +1,48 @@
 extends:
   - airbnb-base
+
 parser: babel-eslint
+
 parserOptions:
   ecmaVersion: 2017
   sourceType: module
   ecmaFeatures:
     impliedStrict: true
     experimentalObjectRestSpread: true
+
 plugins:
   - import
   - fp
+  - vue
+
 env:
   browser: true
   mocha: true
+
 rules:
+
+  # Misc
 
   semi: [1, never]
   quotes: [1, double]
   comma-dangle: [1, only-multiline]
   no-multiple-empty-lines: [1, { max: 3 }]
 
+  # Import
+
   import/no-namespace: 1
   import/no-commonjs: 1
+  import/no-extraneous-dependencies:
+    - 2
+    - devDependencies:
+      - "**/*.test.js"
+      - "**/*.spec.js"
   import/order:
     - 1
     - groups: [builtin, external, internal, parent, sibling, index]
       newlines-between: never
+
+  # Functional Programming
 
   fp/no-arguments: 2
   fp/no-class: 2
@@ -35,6 +52,13 @@ rules:
   fp/no-let: 2
   fp/no-loops: 2
   fp/no-this: 2
+
+  # Disable
+
+  space-before-function-paren: 0
+  operator-linebreak: 0
+  object-curly-spacing: 0
+  no-nested-ternary: 0
 
   # Consider
 
@@ -49,9 +73,3 @@ rules:
   # https://github.com/johnstonbl01/eslint-no-inferred-method-name
   # https://github.com/selaux/eslint-plugin-filenames
   # https://github.com/gajus/eslint-plugin-jsdoc
-
-  # Disable
-
-  space-before-function-paren: 0
-  operator-linebreak: 0
-  object-curly-spacing: 0
