--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "JavaScript code standards at SSENSE",
   "main": "index.js",
   "scripts": {
-    "build": "echo 'module.exports = ' > index.js && js-yaml source/base.yaml >> index.js",
-    "prepublish": "npm run build",
     "postversion": "git push && git push --tags && npm publish"
   },
   "repository": {
@@ -22,10 +20,8 @@
     "url": "https://github.com/SSENSE/eslint-config/issues"
   },
   "homepage": "https://github.com/SSENSE/eslint-config#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "js-yaml": "^3.4.2"
   },
   "peerDependencies": {
     "babel-eslint": "^7.1.1",
