--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/SSENSE/eslint-config#readme",
   "dependencies": {},
   "devDependencies": {
+    "eslint": "^3.12.2"
   },
   "peerDependencies": {
     "babel-eslint": "^7.1.1",
