--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-ssense",
-  "version": "0.0.0",
+  "version": "0.1.0-0",
   "description": "JavaScript code standards at SSENSE",
   "main": "index.js",
   "scripts": {
