--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-eslint": "^7.1.1",
     "eslint": ">= 3",
     "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-fp": "^2.2.0"
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-fp": "^2.2.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
