--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "homepage": "https://github.com/SSENSE/eslint-config#readme",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^3.12.2"
+    "eslint": "^3.19.0"
   },
   "peerDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.3",
     "eslint": ">= 3",
-    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-prettier": "^2.1.1",
     "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-fp": "^2.2.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.3.0"
   }
 }
